--- a/mini-project-1/miniproject1/requirements.txt
+++ b/mini-project-1/miniproject1/requirements.txt
@@ -1,6 +1,6 @@
-numpy
-pandas
-scipy
-scikit-learn
-lightgbm
-joblib
+joblib==1.4.2
+lightgbm==4.6.0
+numpy==2.3.4
+pandas==2.3.3
+scikit_learn==1.6.1
+scipy==1.16.3
